--- a/ejemplo.html
+++ b/ejemplo.html
@@ -4,75 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Talk to Your HTML</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            display: flex;
-            height: 100vh;
-        }
-
-        #ai-container, #iframe-container {
-            flex: 1;
-            border: 1px solid #ddd;
-            overflow: auto;
-            padding: 1rem;
-        }
-
-        #ai-container {
-            display: flex;
-            flex-direction: column;
-        }
-
-        #messages {
-            flex-grow: 1;
-            overflow-y: auto;
-        }
-
-        #user-input {
-            display: flex;
-            margin-top: 1rem;
-        }
-
-        #input-field {
-            flex-grow: 1;
-            padding: 0.5rem;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        #send-button {
-            padding: 0.5rem 1rem;
-            margin-left: 0.5rem;
-            background-color: #007BFF;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        #send-button:hover {
-            background-color: #0056b3;
-        }
-
-        iframe {
-            width: 100%;
-            height: calc(100% - 40px);
-            border: none;
-            overflow-y: scroll;
-        }
-
-        #iframe-header {
-            background-color: #f9f9f9;
-            border-bottom: 1px solid #ddd;
-            padding: 0.5rem;
-            font-size: 0.9rem;
-        }
-
-        #iframe-header span {
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="ai-container">
